# Mage_2D_Game

./: .gitignore  CMakeLists.txt  main.cpp
headers/: ColliderObject.h  Constants.h  Enemy.h  FillBar.h  GameObject.h  GameScene.h  Player.h  Scene.h  Utils.h
sources/: ColliderObject.cpp  Enemy.cpp  FillBar.cpp  GameScene.cpp  Player.cpp
